[package]
name = "sparkfox-be-public-agent"
version.workspace = true
edition.workspace = true

[dependencies]
sparkfox-be-common.workspace = true
sparkfox-be-api-types.workspace = true
sparkfox-be-auth.workspace = true
sparkfox-be-ai-agent.workspace = true
sparkfox-be-preset.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
