[package]
name = "sparkfox-be-requirement"
version.workspace = true
edition.workspace = true

[dependencies]
sparkfox-be-common.workspace = true
sparkfox-be-db.workspace = true
sparkfox-be-api-types.workspace = true
sparkfox-be-file.workspace = true
sparkfox-be-realtime.workspace = true
sparkfox-be-conversation.workspace = true
sparkfox-be-ai-agent.workspace = true
sparkfox-be-terminal.workspace = true
sparkfox-be-auth.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dashmap.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
sqlx = { workspace = true }
reqwest = { workspace = true }
tempfile.workspace = true
