[package]
name = "sparkfox-be-shell"
version.workspace = true
edition.workspace = true

[dependencies]
sparkfox-be-common.workspace = true
sparkfox-be-api-types.workspace = true
sparkfox-be-net.workspace = true
sparkfox-be-system.workspace = true
sparkfox-sh-process-runtime.workspace = true
async-trait.workspace = true
axum.workspace = true
open.workspace = true
which.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tower-http.workspace = true
futures-util.workspace = true

[dev-dependencies]
sparkfox-be-db.workspace = true
http-body-util.workspace = true
bytes = "1"
sqlx.workspace = true
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
wiremock.workspace = true
