[package]
name = "sparkfox-be-system"
version.workspace = true
edition.workspace = true

[dependencies]
sparkfox-be-auth.workspace = true
sparkfox-be-common.workspace = true
sparkfox-be-db.workspace = true
sparkfox-be-net.workspace = true
sparkfox-be-api-types.workspace = true
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
getrandom.workspace = true
futures.workspace = true
aws-config.workspace = true
aws-sdk-bedrock.workspace = true
semver.workspace = true
dirs.workspace = true

[dev-dependencies]
tower = { workspace = true }
http-body-util.workspace = true
reqwest.workspace = true
wiremock = "0.6"
tempfile.workspace = true
