[package]
name = "sparkfox-be-webhook"
version.workspace = true
edition.workspace = true

[dependencies]
sparkfox-be-common.workspace = true
sparkfox-be-db.workspace = true
sparkfox-be-net.workspace = true
sparkfox-be-api-types.workspace = true
sparkfox-be-auth.workspace = true
sparkfox-be-requirement.workspace = true
axum.workspace = true
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
sqlx = { workspace = true }
