[package]
name = "sparkfox-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SparkFox chat engine (BaiLongma conversation pattern clean-room)"

[dependencies]
sparkfox-core = { path = "../sparkfox-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.10", features = ["v4"] }
