[package]
name = "sparkfox-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SparkFox core types and interfaces (L0 shared kernel)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.10", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
rusqlite = { workspace = true }  # 仅为 Error 转换预留

[dev-dependencies]
sparkfox-core = { path = "." }
